--- a/public/challenges/base-apparel-page/index.html
+++ b/public/challenges/base-apparel-page/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/fem.png" />
+    <link rel="icon" type="image/png" href="./assets/images/fem.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Base Apparel Page</title>
   </head>
