--- a/public/challenges/interactive-rating-component/index.html
+++ b/public/challenges/interactive-rating-component/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/fem.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/fem.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Interactive Rating Component</title>
 	</head>
